--- a/02-colors/index.html
+++ b/02-colors/index.html
@@ -9,24 +9,53 @@
   </head>
   <body>
     <!-- Default colors -->
+
     <!-- white, black, red, green, blue, orange, yellow, purple, lime, emerald, teal, cyan, indigo, violet, fuchsia, pink, rose, sky, gray, slate, zinc, neutral, stone, amber,  -->
 
     <!-- Text Colors -->
+    <div class="p text-black">Tailwind is awesome</div>
+    <p class="text-red-900">Tailwind is awesome</p>
+    <p class="text-green-900">Tailwind is awesome</p>
+    <p class="text-emerald-900">Tailwind is awesome</p>
+    <p class="text-blue-900">Tailwind is awesome</p>
 
     <!-- Background Colors -->
+    <p class="bg-blue-900 text-white">Tailwind is awesome</p>
+    <p class="bg-emerald-300 text-white">Tailwind is awesome</p>
+    <p class="bg-indigo-500 text-white">Tailwind is awesome</p>
+    <p class="bg-yellow-900 text-white">Tailwind is awesome</p>
 
     <!-- Text Underline -->
+    <p class="underline decoration-red-500">Tailwind is awesome</p>
 
     <!-- Border Colors -->
+    <input type="text" class="border border-blue-400" />
 
     <!-- Divide Colors -->
+    <div class="divide-y divide-black">
+      <div>item 1</div>
+      <div>item 2</div>
+      <div>item 3</div>
+      <div>item 4</div>
+      <div>item 5</div>
+    </div>
 
     <!-- Outline Colors -->
+    <button class="outline outline-red-500">Button</button>
 
     <!-- Box Shadow Colors (Opacity defaults to 100, but you can set it)-->
+    <button class="shadow-lg bg-cyan-500 shadow-cyan-500">Subscribe</button>
+    <button class="shadow-lg bg-cyan-500 shadow-purple-500/80">
+      Subscribe
+    </button>
 
     <!-- Accent Colors -->
+    <input type="checkbox" class="accent-purple-500" checked />
 
     <!-- Arbitrary Colors -->
-  </body>
+    <div class="bg-[#427fab]">Hello</div>
+    <div class="bg-[rgb(255,0,0)]">Hello</div>
+    <div class="bg-[steelblue]">Hello</div>
+
+
 </html>
